[package]
name = "dioxus-mosaic"
version = "0.2.0"
authors = ["Benjamin Bours <boursbenjamin@gmail.com>"]
edition = "2021"
description = "A React-Mosaic-style tiling window manager library for Dioxus applications"
license = "MIT"
repository = "https://github.com/benjaminbours/dioxus-mosaic"
documentation = "https://docs.rs/dioxus-mosaic"
keywords = ["dioxus", "tiling", "window-manager", "mosaic", "ui"]
categories = ["gui", "web-programming"]
readme = "README.md"

[dependencies]
dioxus = { version = "0.7.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Element",
    "HtmlElement",
    "DomRect",
    "console",
], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
# For unit tests
pretty_assertions = "1.4"

[features]
default = ["web"]
web = ["dioxus/web", "dioxus/hooks", "web-sys", "wasm-bindgen"]
desktop = ["dioxus/desktop", "dioxus/hooks"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"

# Optimize WASM dev builds for faster iteration
[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
